Single movie UI fixes. Null value fetched fix.

--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -59,6 +59,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:background="@drawable/ic_play"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:scaleType="centerCrop"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/watch_later_button"
@@ -70,6 +71,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:background="@drawable/ic_watch_later"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:scaleType="centerCrop"
                     app:layout_constraintTop_toTopOf="@id/buttons_group"
                     app:layout_constraintBottom_toBottomOf="@id/buttons_group"
@@ -80,6 +82,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:background="@drawable/ic_share"
+                    android:foreground="?android:attr/selectableItemBackground"
                     android:scaleType="centerCrop"
                     app:layout_constraintTop_toTopOf="@id/buttons_group"
                     app:layout_constraintBottom_toBottomOf="@id/buttons_group"
@@ -170,7 +173,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_text"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/movie_images_rv"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
                 app:layout_constraintEnd_toEndOf="@id/guideline3"/>
@@ -189,7 +192,7 @@
                     android:id="@+id/separator"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/light_gray"
+                    android:background="@color/medium_dark_gray"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
@@ -197,7 +200,7 @@
             <TextView
                     android:id="@+id/release_date_placeholder"
                     android:textColor="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -213,7 +216,7 @@
             <TextView
                     android:id="@+id/release_date"
                     android:textColor="@color/color_text"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -227,8 +230,8 @@
                     android:id="@+id/separator1"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:background="@color/medium_dark_gray"
+                    android:layout_marginTop="8dp"
                     android:layout_marginStart="8dp"
                     app:layout_constraintTop_toBottomOf="@id/release_date_placeholder"
                     app:layout_constraintStart_toStartOf="parent"
@@ -237,7 +240,7 @@
             <TextView
                     android:id="@+id/runtime_placeholder"
                     android:textColor="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -250,7 +253,7 @@
             <TextView
                     android:id="@+id/runtime"
                     android:textColor="@color/color_text"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -263,8 +266,8 @@
                     android:id="@+id/separator2"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:background="@color/medium_dark_gray"
+                    android:layout_marginTop="8dp"
                     android:layout_marginStart="8dp"
                     app:layout_constraintTop_toBottomOf="@id/runtime_placeholder"
                     app:layout_constraintStart_toStartOf="parent"
@@ -273,7 +276,7 @@
             <TextView
                     android:id="@+id/rating_placeholder"
                     android:textColor="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -286,7 +289,7 @@
             <TextView
                     android:id="@+id/rating"
                     android:textColor="@color/color_text"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -299,8 +302,8 @@
                     android:id="@+id/separator3"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:background="@color/medium_dark_gray"
+                    android:layout_marginTop="8dp"
                     android:layout_marginStart="8dp"
                     app:layout_constraintTop_toBottomOf="@id/rating_placeholder"
                     app:layout_constraintStart_toStartOf="parent"
@@ -309,7 +312,7 @@
             <TextView
                     android:id="@+id/genres_placeholder"
                     android:textColor="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -322,7 +325,7 @@
             <TextView
                     android:id="@+id/genres"
                     android:textColor="@color/color_text"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
@@ -335,8 +338,8 @@
                     android:id="@+id/separator4"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/light_gray"
-                    android:layout_marginTop="4dp"
+                    android:background="@color/medium_dark_gray"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@id/genres_placeholder"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
