--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -8,92 +8,101 @@
         android:layout_margin="5dp"
         android:layout_height="100dp">
 
-    <ImageView
-            android:id="@+id/movie_poster"
-            android:layout_width="64dp"
-            android:padding="10dp"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-            android:id="@+id/movie_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_text"
-            android:textSize="16dp"
-            android:maxLines="1"
-            android:maxLength="40"
-            android:ellipsize="end"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintStart_toEndOf="@+id/movie_poster"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintHorizontal_bias="0.0"/>
-    <TextView
-            android:id="@+id/year_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_text"
-            android:textSize="16dp"
-            android:maxLines="1"
-            android:maxLength="4"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintStart_toEndOf="@+id/movie_poster"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintTop_toTopOf="@+id/genres_text_view"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintEnd_toStartOf="@+id/genres_text_view"
-            app:layout_constraintHorizontal_bias="0.5"/>
-
-    <TextView
-            android:id="@+id/genres_text_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/light_gray"
-            android:textSize="16dp"
-            android:maxLines="1"
-            android:maxLength="40"
-            android:ellipsize="end"
-            android:layout_marginBottom="24dp"
-            android:layout_marginEnd="8dp"
-            app:layout_goneMarginStart="16dp"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintStart_toEndOf="@+id/year_text_view"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <View
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/light_gray"
-            android:layout_marginStart="80dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/view"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+                android:id="@+id/movie_poster"
+                android:layout_width="64dp"
+                android:padding="10dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.constraintlayout.widget.Guideline
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="8dp"
-            android:id="@+id/guideline1"/>
+        <TextView
+                android:id="@+id/movie_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_text"
+                android:textSize="16dp"
+                android:maxLines="1"
+                android:maxLength="40"
+                android:ellipsize="end"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintStart_toEndOf="@+id/movie_poster"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintHorizontal_bias="0.0"/>
+        <TextView
+                android:id="@+id/year_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_text"
+                android:textSize="16dp"
+                android:maxLines="1"
+                android:maxLength="4"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintStart_toEndOf="@+id/movie_poster"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintTop_toTopOf="@+id/genres_text_view"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintEnd_toStartOf="@+id/genres_text_view"
+                app:layout_constraintHorizontal_bias="0.5"/>
 
-    <androidx.constraintlayout.widget.Guideline
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline6"
-            app:layout_constraintGuide_end="8dp"/>
+        <TextView
+                android:id="@+id/genres_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/light_gray"
+                android:textSize="16dp"
+                android:maxLines="1"
+                android:maxLength="40"
+                android:ellipsize="end"
+                android:layout_marginBottom="24dp"
+                android:layout_marginEnd="8dp"
+                app:layout_goneMarginStart="16dp"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintStart_toEndOf="@+id/year_text_view"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/light_gray"
+                android:layout_marginStart="80dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/view"/>
+
+        <androidx.constraintlayout.widget.Guideline
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_begin="8dp"
+                android:id="@+id/guideline1"/>
+
+        <androidx.constraintlayout.widget.Guideline
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/guideline6"
+                app:layout_constraintGuide_end="8dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
