--- a/app/src/main/res/layout/fragment_settings_new.xml
+++ b/app/src/main/res/layout/fragment_settings_new.xml
@@ -33,7 +33,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray"
+            android:background="@color/medium_dark_gray"
             app:layout_constraintBottom_toTopOf="@id/load_images_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -55,7 +55,7 @@
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -75,7 +75,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray"
+            android:background="@color/medium_dark_gray"
             app:layout_constraintTop_toBottomOf="@id/load_images_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -94,7 +94,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray"
+            android:background="@color/medium_dark_gray"
             app:layout_constraintBottom_toTopOf="@id/storage_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -117,7 +117,7 @@
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -139,7 +139,7 @@
                 android:id="@+id/separator1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/light_gray"
+                android:background="@color/medium_dark_gray"
                 app:layout_constraintTop_toBottomOf="@id/image_cache_placeholder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -152,7 +152,7 @@
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/image_cache_placeholder"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +175,7 @@
                 android:id="@+id/separator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/light_gray"
+                android:background="@color/medium_dark_gray"
                 app:layout_constraintTop_toBottomOf="@id/save_your_lists_placeholder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -188,7 +188,7 @@
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/save_your_lists_placeholder"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -210,7 +210,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray"
+            android:background="@color/medium_dark_gray"
             app:layout_constraintTop_toBottomOf="@id/storage_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -218,7 +218,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray"
+            android:background="@color/medium_dark_gray"
             app:layout_constraintBottom_toTopOf="@id/misc_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -241,7 +241,7 @@
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -263,7 +263,7 @@
                 android:id="@+id/separator2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/light_gray"
+                android:background="@color/medium_dark_gray"
                 app:layout_constraintTop_toBottomOf="@id/about_us_placeholder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -276,7 +276,7 @@
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:padding="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/about_us_placeholder"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -299,7 +299,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/light_gray"
+            android:background="@color/medium_dark_gray"
             app:layout_constraintTop_toBottomOf="@id/misc_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
