Fixed jittery my list fragment bug. Added movie year to each movie in list

--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -8,6 +8,18 @@
         android:background="@color/color_background"
         tools:context=".screens.news.NewsFragment">
 
+    <Toolbar
+            android:id="@+id/toolbar"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:minHeight="?attr/actionBarSize"
+            android:title="News"
+            android:titleTextColor="@color/color_red"
+            android:background="@color/color_background_dark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <com.pollux.widget.DualProgressView
             android:id="@+id/gif_progress_bar"
             android:layout_width="100dp"
@@ -27,6 +39,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             tools:listitem="@layout/news_item"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_marginBottom="?attr/actionBarSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
