--- a/app/src/main/res/layout/fragment_settings_new.xml
+++ b/app/src/main/res/layout/fragment_settings_new.xml
@@ -5,6 +5,18 @@
         android:layout_width="match_parent" android:layout_height="match_parent"
         android:background="@color/color_background">
 
+    <Toolbar
+            android:id="@+id/toolbar"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:minHeight="?attr/actionBarSize"
+            android:title="Settings"
+            android:titleTextColor="@color/color_red"
+            android:background="@color/color_background_dark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.constraintlayout.widget.Guideline
             android:id="@+id/start_guideline"
             android:orientation="vertical"
@@ -25,8 +37,8 @@
             android:textColor="@color/light_gray"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="@id/start_guideline"
             app:layout_constraintEnd_toEndOf="@id/end_guideline"/>
 
