Underline for list movie item

--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/light_gray"
+                android:background="@color/dark_gray"
                 android:layout_marginStart="80dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
