--- a/app/src/main/res/layout/fragment_settings_new.xml
+++ b/app/src/main/res/layout/fragment_settings_new.xml
@@ -246,7 +246,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-                android:id="@+id/about_us_placeholder"
+                android:id="@+id/to_watch_placeholder"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:text="About us"
@@ -261,12 +261,12 @@
                 app:layout_constraintBottom_toTopOf="@id/separator2"/>
 
         <ImageView
-                android:id="@+id/about_us_arrow"
+                android:id="@+id/to_watch_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_keyboard_arrow_right"
                 android:layout_marginEnd="64dp"
-                app:layout_constraintStart_toEndOf="@+id/about_us_placeholder"
+                app:layout_constraintStart_toEndOf="@+id/to_watch_placeholder"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/separator2"/>
@@ -276,12 +276,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/medium_dark_gray"
-                app:layout_constraintTop_toBottomOf="@id/about_us_placeholder"
+                app:layout_constraintTop_toBottomOf="@id/to_watch_placeholder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-                android:id="@+id/contact_us_placeholder"
+                android:id="@+id/watched_placeholder"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:text="Contact us"
@@ -289,19 +289,19 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/about_us_placeholder"
+                app:layout_constraintTop_toBottomOf="@+id/to_watch_placeholder"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageView
-                android:id="@+id/contact_us_arrow"
+                android:id="@+id/watched_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_keyboard_arrow_right"
                 android:layout_marginEnd="64dp"
-                app:layout_constraintStart_toEndOf="@+id/contact_us_placeholder"
+                app:layout_constraintStart_toEndOf="@+id/watched_placeholder"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintTop_toBottomOf="@id/separator2"
