--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#ff5252</color>
+    <color name="colorPrimaryDark">#ff0505</color>
+    <color name="colorAccent">#ff527d</color>
     <color name="color_background">#333</color>
     <color name="color_background_dark">#222</color>
     <color name="color_text">#fff</color>
