--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="titleTextColor">@color/color_red</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
