--- a/app/src/main/res/layout/my_watched_movie_item.xml
+++ b/app/src/main/res/layout/my_watched_movie_item.xml
@@ -20,11 +20,11 @@
                 android:orientation="horizontal">
 
             <Button
-                    android:id="@+id/watched_button"
+                    android:id="@+id/to_watch_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    android:background="@drawable/ic_watched"/>
+                    android:background="@drawable/ic_watch_later"/>
 
             <Button
                     android:id="@+id/delete_button"
@@ -43,8 +43,8 @@
             android:clickable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:foreground="?android:attr/selectableItemBackground"
                 android:background="@color/color_background"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
