--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_text"
             android:fontFamily="sans-serif"
-            android:textSize="@dimen/text_l"
+            android:textSize="@dimen/text_m"
             android:textAlignment="center"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
