--- a/app/src/main/res/layout/single_movie_actor_item.xml
+++ b/app/src/main/res/layout/single_movie_actor_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+        android:foreground="?android:attr/selectableItemBackground"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="128dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/dark_gray">
 
     <de.hdodenhof.circleimageview.CircleImageView
