--- a/app/src/main/res/layout/content_movie_list.xml
+++ b/app/src/main/res/layout/content_movie_list.xml
@@ -19,4 +19,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
+    <com.pollux.widget.DualProgressView
+            android:id="@+id/progress_bar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:dpv_inner_color="@color/color_red"
+            app:dpv_inner_padding="8dp"
+            app:dpv_outer_color="@color/color_text"
+            app:dpv_thickness="2dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
