--- a/app/src/main/res/layout/activity_watched.xml
+++ b/app/src/main/res/layout/activity_watched.xml
@@ -8,24 +8,34 @@
         android:background="@color/color_background"
         tools:context=".screens.mylist.watched.WatchedActivity">
 
-    <Toolbar
-            android:id="@+id/toolbar"
-            android:layout_height="wrap_content"
+    <EditText
+            android:id="@+id/input_search"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:layout_width="match_parent"
-            android:minHeight="?attr/actionBarSize"
-            android:title="Watched List"
-            android:titleTextColor="@color/color_red"
-            android:background="@color/color_background_dark"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="wrap_content"
+            android:hint="Search Watched List"
+            android:textColor="@color/color_text"
+            android:textColorHint="@color/light_gray"
+            android:textCursorDrawable="@color/color_red"
+            android:backgroundTint="@color/color_red"
+            android:drawableStart="@drawable/ic_search_black_24dp"
+            android:cursorVisible="true"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:paddingBottom="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent">
+        <requestFocus/>
+    </EditText>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movies_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="?attr/actionBarSize"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toBottomOf="@id/input_search"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
