--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -39,7 +39,7 @@
         <ImageView
                 android:id="@+id/poster_image"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:layout_constraintBottom_toTopOf="@id/buttons_group"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,10 +49,11 @@
                 android:id="@+id/buttons_group"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="@color/color_background_dark"
                 app:layout_constraintTop_toBottomOf="@id/poster_image"
                 app:layout_constraintBottom_toTopOf="@id/imdb_placeholder"
-                app:layout_constraintStart_toEndOf="@id/guideline2"
-                app:layout_constraintEnd_toStartOf="@id/guideline3">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
             <Button
                     android:id="@+id/trailer_button"
@@ -61,6 +62,7 @@
                     android:background="@drawable/ic_play"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:scaleType="centerCrop"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/watch_later_button"
                     app:layout_constraintTop_toTopOf="@id/buttons_group"
@@ -85,6 +87,7 @@
                     android:background="@drawable/ic_share"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:scaleType="centerCrop"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintTop_toTopOf="@id/buttons_group"
                     app:layout_constraintBottom_toBottomOf="@id/buttons_group"
                     app:layout_constraintStart_toEndOf="@+id/watch_later_button"
