Changed application name and icon

--- a/app/src/main/res/drawable/splash_screen_background.xml
+++ b/app/src/main/res/drawable/splash_screen_background.xml
@@ -11,6 +11,6 @@
             android:height="200dp">
         <bitmap
                 android:gravity="fill_horizontal|fill_vertical"
-                android:src="@drawable/binoculars"/>
+                android:src="@drawable/film"/>
     </item>
 </layer-list>
