--- a/app/src/main/res/layout/fragment_settings_new.xml
+++ b/app/src/main/res/layout/fragment_settings_new.xml
@@ -196,7 +196,7 @@
                 android:id="@+id/import_backup_placeholder"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
-                android:text="Import backup from Google Drive"
+                android:text="Import backup from external storage"
                 android:textColor="@color/light_gray"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
