--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@id/buttons_group"
             app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="fitStart"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -102,7 +103,6 @@
             android:background="@drawable/btn_rounded"
             android:textColor="@color/color_text"
             android:layout_marginTop="16dp"
-
             app:layout_constraintTop_toBottomOf="@id/buttons_group"
             app:layout_constraintEnd_toEndOf="@id/guideline3"
             app:layout_constraintStart_toStartOf="@id/guideline2"
