Handle case when youtube is not available.

--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -100,6 +100,7 @@
             android:id="@+id/watch_for_free_btn"
             android:layout_width="0dp"
             android:layout_height="48dp"
+            android:padding="8dp"
             android:background="@drawable/btn_rounded"
             android:textColor="@color/color_text"
             android:layout_marginTop="16dp"
